--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		    <canvas id="camera--sensor"></canvas>
 		    
 		    <!-- Camera view -->
-		    <video id="camera--view" class="rear-camera-flipped" autoplay playsinline></video>
+		    <video id="camera--view" autoplay playsinline></video>
 		    
 		    <!-- Camera output -->
 		    <img src="//:0" alt="" id="camera--output">
